# src/vcp/api.rs
@@ -45,7 +45,7 @@ pub struct PlatformApi {
     // Acccumulator functions
     pub create_accumulator_element: CreateAccumulatorElement,
     pub accumulator_add_remove: AccumulatorAddRemove,
-    // Auxiliary data functions
+    pub get_accumulator_witness: GetAccumulatorWitness,
     pub update_accumulator_witness: UpdateAccumulatorWitness,
     // Proofs
     pub create_proof: CreateProof,
